@@ -142,8 +142,10 @@ The --profile option allows to select the format:
 | ------------- | ------------- | ------------- | ------------- |
 | NONE | all | VLC, Windows Media Player etc. | Playback (default) |
 | FF | Linux, Win10 | Firefox| Playback while transcoding |
-| FF | Win7 | Firefox| Playback while transcoding, audio only |
-| EDGE | Win10 | MS Edge, IE > 11| Playback while transcoding |
+| | Win7 | Firefox | Playback while transcoding, audio only |
+| EDGE | Win10 | MS Edge, IE > 11 | Playback while transcoding |
+| IE | Win10 | MS IE <= 11 | Playback while transcoding |
+| | Win7 | MS IE <= 11| Must decode first, audio only |
 
 In most cases files will not play if not properly optimised.
 
