@@ -19,6 +19,7 @@ Changes in this release:
            NONE     no profile
            FF       optimise for Firefox
            EDGE     optimise for MS Edge and Internet Explorer > 11
+           IE       optimise for MS Edge and Internet Explorer <= 11
            Defaults to NONE
 * Feature: enhanced error output for SQLite (if supported by library version)
 * Feature: copy album arts from source if supported by target format (MP3/4).
